# GuitarNotes

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  SinWaveAudio.cpp  SinWaveAudio.h  audioprovider.cpp  audioprovider.h  gui.cpp  gui.h  spectrogram.cpp  spectrogram.h
